browser/base/content/browser.css
/* ... */
.
tabbrowser
-
tabs
[
positionpinnedtabs
]
>
.
tabbrowser
-
tab
[
pinned
]
{
position
:
fixed
!
important
;
display
:
block
;
}
.
tabbrowser
-
tabs
[
movingtab
]
>
.
tabbrowser
-
tab
[
selected
]
{
position
:
relative
;
z
-
index
:
2
;
pointer
-
events
:
none
;
}
.
tabbrowser
-
tabs
[
movingtab
]
>
.
tabbrowser
-
tab
[
fadein
]
:
not
(
[
selected
]
)
{
transition
:
transform
200ms
ease
-
out
;
}
#
alltabs
-
popup
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
tabbrowser
.
xml
#
tabbrowser
-
alltabs
-
popup
"
)
;
}
toolbar
[
printpreview
=
"
true
"
]
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
printPreviewBindings
.
xml
#
printpreviewtoolbar
"
)
;
}
toolbar
[
overflowable
]
>
.
customization
-
target
{
overflow
:
hidden
;
}
toolbar
:
not
(
[
overflowing
]
)
>
.
overflow
-
button
toolbar
[
customizing
]
>
.
overflow
-
button
{
display
:
none
;
}
%
ifdef
CAN_DRAW_IN_TITLEBAR
#
main
-
window
:
not
(
[
chromemargin
]
)
>
#
titlebar
#
main
-
window
[
inFullscreen
]
>
#
titlebar
#
main
-
window
[
inFullscreen
]
.
titlebar
-
placeholder
#
main
-
window
:
not
(
[
tabsintitlebar
]
)
.
titlebar
-
placeholder
{
display
:
none
;
}
#
titlebar
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
general
.
xml
#
windowdragbox
"
)
;
-
moz
-
window
-
dragging
:
drag
;
}
#
titlebar
-
spacer
{
pointer
-
events
:
none
;
}
#
main
-
window
[
tabsintitlebar
]
#
titlebar
-
buttonbox
{
position
:
relative
;
}
#
titlebar
-
buttonbox
{
-
moz
-
appearance
:
-
moz
-
window
-
button
-
box
;
}
%
ifdef
XP_MACOSX
#
titlebar
-
fullscreen
-
button
{
-
moz
-
appearance
:
-
moz
-
mac
-
fullscreen
-
button
;
}
#
titlebar
-
buttonbox
-
container
:
-
moz
-
locale
-
dir
(
ltr
)
{
-
moz
-
box
-
align
:
start
;
}
#
titlebar
-
buttonbox
-
container
:
-
moz
-
locale
-
dir
(
rtl
)
{
-
moz
-
box
-
align
:
end
;
}
#
titlebar
-
secondary
-
buttonbox
:
-
moz
-
locale
-
dir
(
ltr
)
#
titlebar
-
buttonbox
-
container
:
-
moz
-
locale
-
dir
(
rtl
)
.
titlebar
-
placeholder
[
type
=
"
fullscreen
-
button
"
]
:
-
moz
-
locale
-
dir
(
ltr
)
.
titlebar
-
placeholder
[
type
=
"
caption
-
buttons
"
]
:
-
moz
-
locale
-
dir
(
rtl
)
{
-
moz
-
box
-
ordinal
-
group
:
1000
;
}
#
titlebar
-
secondary
-
buttonbox
:
-
moz
-
locale
-
dir
(
rtl
)
#
titlebar
-
buttonbox
-
container
:
-
moz
-
locale
-
dir
(
ltr
)
.
titlebar
-
placeholder
[
type
=
"
caption
-
buttons
"
]
:
-
moz
-
locale
-
dir
(
ltr
)
.
titlebar
-
placeholder
[
type
=
"
fullscreen
-
button
"
]
:
-
moz
-
locale
-
dir
(
rtl
)
{
-
moz
-
box
-
ordinal
-
group
:
0
;
}
%
else
#
titlebar
-
buttonbox
-
container
{
-
moz
-
box
-
align
:
start
;
}
%
endif
%
if
!
defined
(
MOZ_WIDGET_GTK
)
&
&
!
defined
(
MOZ_WIDGET_QT
)
#
TabsToolbar
>
.
private
-
browsing
-
indicator
{
-
moz
-
box
-
ordinal
-
group
:
1000
;
}
%
endif
%
ifdef
XP_WIN
#
main
-
window
[
sizemode
=
"
maximized
"
]
#
titlebar
-
buttonbox
{
-
moz
-
appearance
:
-
moz
-
window
-
button
-
box
-
maximized
;
}
#
main
-
window
[
tabletmode
]
#
titlebar
-
min
#
main
-
window
[
tabletmode
]
#
titlebar
-
max
{
display
:
none
!
important
;
}
#
main
-
window
[
tabsintitlebar
]
#
TabsToolbar
#
main
-
window
[
tabsintitlebar
]
#
toolbar
-
menubar
:
not
(
[
autohide
=
true
]
)
#
main
-
window
[
tabsintitlebar
]
#
navigator
-
toolbox
>
toolbar
:
not
(
#
toolbar
-
menubar
)
:
-
moz
-
lwtheme
{
-
moz
-
window
-
dragging
:
drag
;
}
%
endif
%
endif
#
main
-
window
[
inFullscreen
]
[
inDOMFullscreen
]
#
navigator
-
toolbox
#
main
-
window
[
inFullscreen
]
[
inDOMFullscreen
]
#
fullscr
-
toggler
#
main
-
window
[
inFullscreen
]
[
inDOMFullscreen
]
#
sidebar
-
box
#
main
-
window
[
inFullscreen
]
[
inDOMFullscreen
]
#
sidebar
-
splitter
#
main
-
window
[
inFullscreen
]
:
not
(
[
OSXLionFullscreen
]
)
toolbar
:
not
(
[
fullscreentoolbar
=
true
]
)
#
main
-
window
[
inFullscreen
]
#
global
-
notificationbox
#
main
-
window
[
inFullscreen
]
#
high
-
priority
-
global
-
notificationbox
{
visibility
:
collapse
;
}
#
navigator
-
toolbox
[
fullscreenShouldAnimate
]
{
transition
:
1
.
5s
margin
-
top
ease
-
out
;
}
toolbaritem
[
sdkstylewidget
=
"
true
"
]
>
toolbarbutton
toolbarpaletteitem
>
toolbaritem
[
sdkstylewidget
=
"
true
"
]
>
iframe
toolbarpaletteitem
>
toolbaritem
[
sdkstylewidget
=
"
true
"
]
>
.
toolbarbutton
-
text
{
display
:
none
;
}
toolbarpaletteitem
:
-
moz
-
any
(
[
place
=
"
palette
"
]
[
place
=
"
panel
"
]
)
>
toolbaritem
[
sdkstylewidget
=
"
true
"
]
>
toolbarbutton
{
display
:
-
moz
-
box
;
}
toolbarpaletteitem
>
toolbaritem
[
sdkstylewidget
=
"
true
"
]
[
cui
-
areatype
=
"
toolbar
"
]
>
.
toolbarbutton
-
text
{
display
:
-
moz
-
box
;
}
toolbarpaletteitem
[
removable
=
"
false
"
]
{
opacity
:
0
.
5
;
cursor
:
default
;
}
#
bookmarks
-
toolbar
-
placeholder
toolbarpaletteitem
>
#
personal
-
bookmarks
>
#
PlacesToolbar
#
personal
-
bookmarks
[
cui
-
areatype
=
"
menu
-
panel
"
]
>
#
PlacesToolbar
#
personal
-
bookmarks
[
cui
-
areatype
=
"
toolbar
"
]
[
overflowedItem
=
true
]
>
#
PlacesToolbar
{
display
:
none
;
}
#
PlacesToolbarDropIndicatorHolder
{
position
:
absolute
;
top
:
25
%
;
}
toolbarpaletteitem
>
#
personal
-
bookmarks
>
#
bookmarks
-
toolbar
-
placeholder
#
personal
-
bookmarks
[
cui
-
areatype
=
"
menu
-
panel
"
]
>
#
bookmarks
-
toolbar
-
placeholder
#
personal
-
bookmarks
[
cui
-
areatype
=
"
toolbar
"
]
[
overflowedItem
=
true
]
>
#
bookmarks
-
toolbar
-
placeholder
{
display
:
-
moz
-
box
;
}
#
nav
-
bar
-
customization
-
target
>
#
personal
-
bookmarks
toolbar
:
not
(
#
TabsToolbar
)
>
#
wrapper
-
personal
-
bookmarks
toolbar
:
not
(
#
TabsToolbar
)
>
#
personal
-
bookmarks
{
-
moz
-
box
-
flex
:
1
;
}
/* ... */

