Bug 1116578 - Make customize mode keyboard accessible by allowing tabbing through the toolbarpaletteitems and using the context menu key or keyboard shortcut (Shift+F10 on Windows and Linux) to open the context menu and move items between customizable areas. r=Gijs
MozReview-Commit-ID: 2Vjfh9AwpQ7

UltraBlame original commit: 752d9eb3ebea2993d4fb32b3513db9f9b6b766e3

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -2239,6 +2239,46 @@ cursor
 default
 ;
 }
+%
+ifndef
+XP_MACOSX
+toolbarpaletteitem
+[
+place
+=
+"
+palette
+"
+]
+toolbarpaletteitem
+[
+place
+=
+"
+panel
+"
+]
+toolbarpaletteitem
+[
+place
+=
+"
+toolbar
+"
+]
+{
+-
+moz
+-
+user
+-
+focus
+:
+normal
+;
+}
+%
+endif
 #
 bookmarks
 -
